syntax = "proto3";
package transfer;
option go_package = "github.com/weplanx/transfer/api";
import "google/protobuf/empty.proto";

service API {
  rpc Get(google.protobuf.Empty) returns (GetReply) {}
  rpc Create(CreateRequest) returns (google.protobuf.Empty) {}
  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {}
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {}
  rpc Info(InfoRequest) returns (InfoReply) {}
  rpc Publish(PublishRequest) returns (google.protobuf.Empty) {}
}

message Transfer {
  string key = 1;
  string topic = 2;
  string description = 3;
}

message GetReply {
  repeated Transfer data = 1;
}

message CreateRequest {
  string key = 1;
  string topic = 2;
  string description = 3;
}

message UpdateRequest {
  string key = 1;
  string description = 2;
}

message DeleteRequest {
  string key = 1;
}

message InfoRequest {
  string key = 1;
}

message InfoReply {
  InfoState state = 1;
  int64 create_time = 2;
}

message InfoState {
  uint64 messages = 1;
  uint64 bytes = 2;
  uint64 first_seq = 3;
  int64 first_time = 4;
  uint64 last_seq = 5;
  int64 last_time = 6;
  int64 consumer_count = 7;
}

message PublishRequest {
  string topic = 1;
  bytes payload = 2;
}


